[project]
name = "stereo-camera-path-planning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "opencv-contrib-python>=4.11.0.86",
    "pathfinding>=1.0.16",
    "picamera2>=0.3.25",
    "tk>=0.1.0",
]
